--- a/www-phonegap/Voetbalsensatie/www/index.html
+++ b/www-phonegap/Voetbalsensatie/www/index.html
@@ -21,6 +21,7 @@
 <body>
   <div data-role="page" data-theme="a">
     <div data-role="header" data-position="inline">
+      <h1>Voetbalsensatie</h1>
 <!--                  <?php
               $data =  ( 
               );  
