--- a/www-phonegap/Voetbalsensatie/www/index.html
+++ b/www-phonegap/Voetbalsensatie/www/index.html
@@ -1,56 +1,171 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" ng-app="app" ng-csp>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Voetbalsensatie Live Score App</title>
-  <link rel="stylesheet" href="css/themes/Voetbalsensatie.min.css" />
-  <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css" />
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
-  <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-  <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//api.statsfc.com/widget/table-2.0.js";
-    fjs.parentNode.insertBefore(js, fjs);
-}(document, "script", "statsfc-table-js"));</script>
+    <meta charset="utf-8" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <script src="scripts/platformOverrides.js"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/onsen/js/onsenui.js"></script>
+    <link rel="stylesheet" href="lib/onsen/css/onsenui.css" />
+    <link rel="stylesheet" href="lib/onsen/css/onsen-css-components-blue-basic-theme.css" />
+    <link rel="stylesheet" href="lib/angular/angular-csp.css" />
+
+
+
+    <title>Voetbalsensatie Mobile APP</title>
+
+    <script>
+        angular.module('app', ['onsen']);
+    </script>
+
+    <style>
+        .page--menu-page__background {
+            background-color: #333;
+        }
+
+        .page--menu-page__content {
+            color: white;
+        }
+
+        .menu-close,
+        .menu-close > .toolbar-button {
+            color: #999;
+        }
+
+        .menu-list,
+        .menu-item:first-child,
+        .menu-item:last-child,
+        .menu-item {
+            background-color: transparent;
+            background-image: none !important;
+            border-color: transparent;
+            color: #fff;
+        }
+
+        .menu-item {
+            padding: 0 0 0 20px;
+            line-height: 52px;
+            height: 52px;
+            text-shadow: rgba(0, 0, 0, 0.4) 0px 1px 0px;
+        }
+
+            .menu-item:active {
+                background-color: rgba(255, 255, 255, 0.1);
+            }
+
+        .menu-notification {
+            display: inline-block;
+            margin-top: 12px;
+            font-size: 14px;
+            height: 16px;
+            line-height: 16px;
+            min-width: 16px;
+            font-weight: 600;
+        }
+
+        .bottom-menu-list,
+        .bottom-menu-item:first-child,
+        .bottom-menu-item:last-child,
+        .bottom-menu-item {
+            border-color: #393939;
+            background-color: transparent;
+            background-image: none !important;
+            color: #ccc;
+        }
+
+            .bottom-menu-item:active {
+                background-color: rgba(255, 255, 255, 0.1);
+            }
+    </style>
+
 </head>
+
 <body>
-  <div data-role="page" data-theme="a">
-    <div data-role="header" data-position="inline">
-      <h1>Voetbalsensatie</h1>
-<!--                  <?php
-              $data =  ( 
-              );  
+    <!-- Cordova reference -->
+    <script src="cordova.js"></script>
+    <script src="scripts/index.js"></script>
+    <!-- -->
 
-              $data_string = json_encode($data);$ch = curl_init('https://api.crowdscores.com/v1/matches/28895?api_key=db1e5763fc564844948c5fad0b8d4c3a');     
-              curl_setopt($ch, CURLOPT_CUSTOMREQUEST, "POST");  
-              curl_setopt($ch, CURLOPT_POSTFIELDS, $data_string);   
-              curl_setopt($ch, CURLOPT_RETURNTRANSFER, false);    
-              curl_setopt($ch, CURLOPT_HTTPHEADER, array('Content-Type: application/json'));     
-              $result = curl_exec($ch);curl_close($ch);
-            ?>  -->
+    <ons-sliding-menu menu-page="menu.html" main-page="page1.html" side="left"
+                      var="menu" type="reveal" max-slide-distance="260px" swipeable="true">
+    </ons-sliding-menu>
+
+    <ons-template id="menu.html">
+        <ons-page modifier="menu-page">
+            <ons-toolbar modifier="transparent"></ons-toolbar>
+
+            <ons-list class="menu-list">
+                <ons-list-item class="menu-item" ng-click="menu.setMainPage('page1.html', {closeMenu: true})">
+                    <ons-icon icon="fa-home"></ons-icon>
+                    Home
+                </ons-list-item>
+
+                <ons-list-item class="menu-item" ng-click="menu.setMainPage('page2.html', {closeMenu: true})">
+                    <ons-icon icon="fa-futbol"></ons-icon>
+                    Clubs
+                </ons-list-item>
+
+                <ons-list-item class="menu-item" ng-click="menu.setMainPage('page1.html', {closeMenu: true})">
+                    <ons-icon icon="fa-twitter"></ons-icon>
+                    Hotel
+                </ons-list-item>
+            </ons-list>
+
+            <br>
+
+            <ons-list class="bottom-menu-list">
+                <ons-list-item class="bottom-menu-item" ng-click="menu.setMainPage('page2.html', {closeMenu: true})">
+                    Settings
+                    <div class="notification menu-notification">3</div>
+                </ons-list-item>
+
+                <ons-list-item class="bottom-menu-item" ng-click="menu.setMainPage('page1.html', {closeMenu: true})">
+                    Help
+                </ons-list-item>
+
+                <ons-list-item class="bottom-menu-item" ng-click="menu.setMainPage('page2.html', {closeMenu: true})">
+                    Send feedback
+                </ons-list-item>
+            </ons-list>
+        </ons-page>
+    </ons-template>
+
+    <ons-template id="page1.html">
+        <ons-page>
+            <ons-toolbar>
+                <div class="left">
+                    <ons-toolbar-button ng-click="menu.toggle()">
+                        <ons-icon icon="ion-navicon" size="28px" fixed-width="false"></ons-icon>
+                    </ons-toolbar-button>
+                </div>
+                <div class="center"><img src="img/logosensatie.png"></div>
+            </ons-toolbar>
+
+        </ons-page>
+    </ons-template>
+
+    <ons-template id="page2.html">
+        <ons-page>
+            <ons-toolbar>
+                <div class="left">
+                    <ons-toolbar-button ng-click="menu.toggle()">
+                        <ons-icon icon="ion-navicon" size="28px" fixed-width="false"></ons-icon>
+                    </ons-toolbar-button>
+                </div>
+                <div class="center">Clubs</div>
+            </ons-toolbar>
 
 
-    </div>
-    <div data-role="content" data-theme="a">
-    <div data-role="collapsible">
-    <h3>new</h3>
-<div data-role="content" data-theme="a" class="statsfc-table"
-    data-key="8na7AFjWrTwPTAZ2xqf0jg035eRlBC7lS35SMKWL"
-    data-competition="EPL"
-    data-table-type="full"
-    data-rows="10"
-    data-show-badges="true"
-    data-show-form="true"
-    data-omit-errors="false"
-    data-use-default-css="false">
-</div>
-<h1>hallo</h1>
-    </div>
-  </div>
+            <ons-row style="margin-top: 100px; text-align: center;">
+                <ons-col>
+                    <ons-button modifier="light" ng-click="menu.toggleMenu()">
+                        Toggle Menu
+                    </ons-button>
+                </ons-col>
+            </ons-row>
+
+        </ons-page>
+    </ons-template>
 </body>
 </html>
