--- a/www-phonegap/Voetbalsensatie/www/index.html
+++ b/www-phonegap/Voetbalsensatie/www/index.html
@@ -140,6 +140,7 @@
                     </ons-toolbar-button>
                 </div>
                 <div class="center"><img src="img/logosensatie.png"></div>
+                <p>testtest</p>
             </ons-toolbar>
 
         </ons-page>
