--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -4,10 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
+ <script>document.write('<base href="' + document.location + '" />');</script>
+    
+    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
-
-    <!-- compiled css output -->
+    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
+    -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -17,7 +21,6 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/api.js"></script>
     <script src="js/controllers.js"></script>
   </head>
 
