--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
- <script>document.write('<base href="' + document.location + '" />');</script>
-    
+    <script>document.write('<base href="' + document.location + '" />');</script>
+
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
@@ -18,13 +18,38 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.2.2/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.4.2.min.js"></script>
   </head>
 
   <body ng-app="starter">
+    <ion-tabs ng-hide="check.email||check.facebook" class="tabs-icon-top tabs-positive">
+      <ion-tab title="Home" icon-off="ion-ios-home" icon-on="ion-ios-home" href="#/app/home">
+        <ion-nav-view name="home"></ion-nav-view>
+      </ion-tab>
+      <ion-tab title="Login" icon-off="ion-ios-person" icon-on="ion-ios-person" href="#/app/login">
+        <ion-nav-view name="login"></ion-nav-view>
+      </ion-tab>
+      <ion-tab title="Signup" icon-off="ion-person-add" icon-on="ion-person-add" href="#/app/signup">
+        <ion-nav-view name="signup"></ion-nav-view>
+      </ion-tab>
+    </ion-tabs>
+    <ion-tabs ng-show="check.email||check.facebook" class="tabs-icon-top tabs-positive">
+      <ion-tab title="Home" icon-off="ion-ios-home" icon-on="ion-ios-home" href="#/app/home">
+        <ion-nav-view name="home"></ion-nav-view>
+      </ion-tab>
+      <ion-tab title="Account" icon-off="ion-ios-gear" icon-on="ion-ios-gear" href="#/app/account">
+        <ion-nav-view name="account"></ion-nav-view>
+      </ion-tab>
+      <ion-tab title="Voorkeuren" icon-off="ion-ios-toggle-outline" icon-on="ion-ios-toggle-outline" href="#/app/voorkeur">
+        <ion-nav-view name="voorkeur"></ion-nav-view>
+      </ion-tab>
+    </ion-tabs>
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
