--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -28,7 +28,7 @@
   </head>
 
   <body ng-app="starter">
-    <ion-tabs hide-back-button="true" ng-hide="check.email||check.facebook" class="tabs-icon-top tabs-positive" enable-menu-with-back-views="true">
+    <!-- <ion-tabs hide-back-button="true" ng-hide="check.email||check.facebook" class="tabs-icon-top tabs-positive" enable-menu-with-back-views="true">
       <ion-tab title="Home" icon-off="ion-ios-home" icon-on="ion-ios-home" href="#/app/home">
         <ion-nav-view name="home"></ion-nav-view>
       </ion-tab>
@@ -49,7 +49,7 @@
       <ion-tab title="Voorkeuren" icon-off="ion-ios-toggle-outline" icon-on="ion-ios-toggle-outline" href="#/app/voorkeur">
         <ion-nav-view name="voorkeur"></ion-nav-view>
       </ion-tab>
-    </ion-tabs>
+    </ion-tabs> -->
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
